fix: sets z-index of footer so it cooperates with story

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -129,6 +129,7 @@ body {
 
 .footer {
   position: fixed;
+  z-index: 2;
   bottom: 0;
   width: 100%;
   height: 60px;
